# Steamfitter.Api/ViewModels/ScenarioRoleLookup.cs
@@ -1,13 +1,0 @@
-// Copyright 2026 Carnegie Mellon University. All Rights Reserved.
-// Released under a MIT (SEI)-style license. See LICENSE.md in the project root for license information.
-
-using System;
-
-namespace Steamfitter.Api.ViewModels
-{
-    public class ScenarioRoleLookup
-    {
-        public Guid Id { get; set; }
-        public string Name { get; set; }
-    }
-}
